hphp/test/zend/bad/Zend/tests/errmsg_019.php
<?php

class test {
	function __destruct($var) {
	}
}

echo "Done\n";
?>